统一内容风格

--- a/1/A/01.tex
+++ b/1/A/01.tex
@@ -48,7 +48,7 @@
 的方向，箭头或箭尾表示力的
 作用点，箭头所沿的直线叫做
 力的作用线．这种表示力的方
-法，叫做\textbf{力的图示} ．图 ~\ref{fig_A_1-1}  中表示的是作用在小车上的100牛
+法，叫做\textbf{力的图示} ．图~\ref{fig_A_1-1} 中表示的是作用在小车上的100牛
 的力．
 
 \begin{figure} [htp]\centering
@@ -84,7 +84,7 @@
 
     一个物体的各部分都要受到地球对它的作用力，我们可
 以认为重力的作用集中于一点，这一点叫做物体的\textbf{重心} ．如
-图 \ref{fig_A_1-2} 那样用手指支持一根铅
+图~\ref{fig_A_1-2} 那样用手指支持一根铅
 笔，我们可以找到一个位置，使
 铅笔水平地支持在手指上，手
 指上方铅笔上的$C$点就是铅笔
@@ -103,7 +103,7 @@
     质量均匀分布的物体（均匀物体），重心的位置只跟物体
 的形状有关．有规则形状的均匀物体，它的重心就在几何中
 心上．例如，均匀直棒的重心在棒的中点，均匀球体的重心在
-球心，均匀圆柱体的重心在轴线的中点（图 \ref{fig_A_1-3} ）．
+球心，均匀圆柱体的重心在轴线的中点（图~\ref{fig_A_1-3}）．
 
  \begin{figure} [htp]\centering
 \includegraphics{fig/A/1-3.pdf} 
@@ -161,7 +161,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 
     地球对物体产生重力，并不需要地球和物体直接接触．弹
 力则不同，它只有在物体直接接触并产生形变的时候才能产
-生，把一本书放在泡沫塑料上（图 \ref{fig_A_1-7} ），书把泡沫塑料压弯，
+生，把一本书放在泡沫塑料上（图~\ref{fig_A_1-7}），书把泡沫塑料压弯，
 被压弯的泡沫塑料要恢复原状，产生向上的弹力，这就是它对
 书的支持力．把一个物体挂在弹簧上，物体把弹簧拉长，被
 拉长的弹簧要恢复原状，产生向上的弹力，这就是它对物体的
@@ -180,14 +180,14 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 的弹力，这就是书对桌面的压力．发生形变的桌面要恢复原
 状，产生向上的弹力，这就是桌面对书的支持力．\textit{凡是支持物体对物体的支持力，
 都是支持物因为发生形变而对物体产生弹力；支持力的方向总是垂直于支持面并指向
-被支持的物体} （图 \ref{fig_A_1-8} ）．
+被支持的物体} （图~\ref{fig_A_1-8}）．
 把电灯挂在电线上，电灯拉紧电线，使电灯和电线
 都发生极其微小的形变，发生形变的电灯要恢复原状，对电
 线产生向下的弹力，这就是电灯对电线的拉力．发生形变的
 电线要恢复原状，产生向上的弹力，这就是电线对电灯的拉
 力．\textit{凡是一根线（或绳）对物体的拉力，都是这根线（或绳）因
 为发生形变而对物体产生的弹力；拉力的方向总是指向线收
-缩的方向} （图 \ref{fig_A_1-9} ）．
+缩的方向} （图~\ref{fig_A_1-9}）．
 
 \begin{figure} [htp]\centering
 	\begin{subfigure} {0.46\linewidth} 
@@ -222,7 +222,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 \section*{阅读材料：显示微小形变的装置} 
 
 
-图 \ref{fig_A_1-10} 是一种显示微小形变的装置，它可以把微小形变
+图~\ref{fig_A_1-10} 是一种显示微小形变的装置，它可以把微小形变
 “放大”到可以直接看出来．在一张大案子上放两个平面镜$M$
 和$N$，让一束光线依次被这两面镜子反射，最后射到一个刻
 度尺上，形成一个光点，只要用力压桌面，镜子就要向箭头所
@@ -246,13 +246,13 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 \subsection*{练习一} 
 \begin{enumerate} 
 \item  举出几个实例来说明力是物体对物体的作用．
-\item 放在水平面上的物体(图 \ref{fig_A_1-8a} )受到几个力的作用？
+\item 放在水平面上的物体(图~\ref{fig_A_1-8a})受到几个力的作用？
   各是什么物体对它的作用，是哪种力？画出物体受力的示意
   图．
-\item 用一根绳子把小球挂在天花板上(图 \ref{fig_A_1-9a} )，小球受
+\item 用一根绳子把小球挂在天花板上(图~\ref{fig_A_1-9a})，小球受
   到几个力的作用？各是什么物体对它的作用，是哪种力？画出
   小球受力的示意图．
-\item 用两根绳子把物体挂在天花板上(图 \ref{fig_A_1-9b} )，这个物
+\item 用两根绳子把物体挂在天花板上(图~\ref{fig_A_1-9b})，这个物
   体受到几个力的作用？各是什么物体对它的作用，是哪种力？
   画出物体受力的示意图．
  \item 找一个薄板状的物体，用书中所讲的悬挂方法求出
@@ -276,7 +276,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 的弹力就越大．把弓拉得越满，箭就射出得越远，把一个物
 体放在支持物上，物体越重，支持物弯曲得越厉害，支持力就
 越大．还有一种叫做扭转形变，在金属丝的下面挂一个横
-杆，用力扭这个横杆，金属丝就发生扭转形变（图 \ref{fig_A_1-11} ）．放
+杆，用力扭这个横杆，金属丝就发生扭转形变（图~\ref{fig_A_1-11}）．放
 开手，发生扭转形变的金属丝产生的弹力会把横杆扭回来．金
 属丝的扭转角度越大，弹力就越大．
 
@@ -346,8 +346,8 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
     摩擦力也是发生在两个互相接触的物体之间．当一个物
 体在另一个物体表面上做相对滑动的时候，要受到另一个物
 体阻碍它运动的力，这种力叫做滑动摩擦力．滑动摩擦力的
-方向总跟接触面相切，并且跟物体的相对运动的方向相反（图
- \ref{fig_A_1-12} ）．实验表明：\textit{滑动摩擦力跟压力成正比
+方向总跟接触面相切，并且跟物体的相对运动的方向相反（图~\ref{fig_A_1-12}）．
+实验表明：\textit{滑动摩擦力跟压力成正比
 也就是跟一个物体对另一个物体表面的垂直作用力成正比．} 
 用$f$表示滑动摩擦力的大小，用$N$表示压力的大小，那么
 \[f=\mu N,\]
@@ -362,12 +362,12 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 制成物体的材料决定的，材料不同，两物体间的滑动摩擦系数
 也不同．滑动摩擦系数还跟接触面的粗糙程度有关．在相同
 的压力下，滑动摩擦系数越大，滑动摩擦力就越大．滑动摩擦
-系数是两个力的比值，没有单位．表 \ref{tab_A_1-1} 列出了在通常情况下
+系数是两个力的比值，没有单位．表~\ref{tab_A_1-1} 列出了在通常情况下
 几种材料间的滑动摩擦系数．
 
 \begin{table} [htp]\centering
 \caption{几种材料间的滑动摩擦系数} \label{tab_A_1-1} 
-\begin{tabular} {cc} 
+\begin{tblr} {cc} 
 \hline
 材料   &  滑动摩擦系数\\
 \hline
@@ -379,7 +379,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 木头—冰   &  0.03\\
 橡皮轮胎—路面（干）   &  0.71\\
 \hline
-\end{tabular} 
+\end{tblr} 
 \end{table} 
 
     除了滑动摩擦，还有滚动摩擦．滚动摩擦是一个物体在
@@ -502,8 +502,8 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 形变，这时不但弹簧受到手的拉力，手也受到弹簧的拉力．坐
 在椅子上用力推桌子，会感到桌子也在推我们，我们的身体要
 向后移．在平静的水面上，在一只船上用力推另一只船，另一
-只船也要推前一只船，两只船将同时向相反方向运动（图 \ref{fig_A_1-13} ）．在水面上放两个软木塞，一个软木塞上放一个小磁铁，
-另一个软木塞上放一个小铁条（图 \ref{fig_A_1-14} ），可以看到，由于小
+只船也要推前一只船，两只船将同时向相反方向运动（图~\ref{fig_A_1-13}）．在水面上放两个软木塞，一个软木塞上放一个小磁铁，
+另一个软木塞上放一个小铁条（图~\ref{fig_A_1-14}），可以看到，由于小
 磁铁和小铁条相互吸引，两个软木塞相向运动起来．地球和
 地面上物体之间的作用也是相互的，地面上的物体受到地球
 的吸引，即受到重力，地球也受到地面上的物体的吸引．
@@ -532,7 +532,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 \caption{} \label{fig_A_1-15} 
 \end{figure} 
 
-    把两个弹簧秤$A$和$B$联结在一起（图 \ref{fig_A_1-15} ）．用手拉弹
+    把两个弹簧秤$A$和$B$联结在一起（图~\ref{fig_A_1-15}）．用手拉弹
 簧秤$A$，可以看到两个弹簧秤的指针同时移动．弹簧秤$B$的
 读数指出弹簧秤$A$对它的作用力$F$的大小，而弹簧秤$A$的读
 数指出弹簧秤$B$对它的反作用力$F'$的大小．可以看到，两个
@@ -579,10 +579,10 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 倍，因此，$A$作用于$B$的力大于$B$作用于$A$的力．
 \end{enumerate} 
 
-\item  放在水平面上的物体（图 \ref{fig_A_1-8a} ）受到两个力的作用．
+\item  放在水平面上的物体（图~\ref{fig_A_1-8a}）受到两个力的作用．
 这两个力的反作用力各作用在什么物体上？在这四个力中，哪
 两对力是作用力和反作用力？哪两个力是相互平衡的力？
-\item  挂在绳子（或弹簧）上的物体（图 \ref{fig_A_1-9a} ）受到两个力
+\item  挂在绳子（或弹簧）上的物体（图~\ref{fig_A_1-9a}）受到两个力
 的作用．这两个力的反作用力各作用在什么物体上？在这四
 个力中，哪两对力是作用力和反作用力？哪两个力是相互平衡
 的力？
@@ -600,7 +600,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 到两个力的作用．书由于受到地球的吸引而受到重力$G$，方
 向竖直向下．书压在桌面上使桌面发生极微小的形变，发生
 形变的桌面对书产生支持力$N$，方向竖直向上．书的受力图
-如图 \ref{fig_A_1-16} 所示．由于书是静止在桌面上的，所以$G$和$N$是作
+如图~\ref{fig_A_1-16} 所示．由于书是静止在桌面上的，所以$G$和$N$是作
 用在书上的相互平衡的力，它们大小相等方向相反．
 \begin{figure} [htp]\centering
 \includegraphics{fig/A/1-16.pdf} 
@@ -611,7 +611,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 来，在这个过程中，木块受到几个力的作用？木块除了同样
 受到重力$G$和支持力$N$的作用外，还受到滑动摩擦力$f$作
 用，滑动摩擦力$f$的方向与木块运动的方向相反．木块的受
-力图如图 \ref{fig_A_1-17} 所示．
+力图如图~\ref{fig_A_1-17} 所示．
 
 \begin{figure} [htp]\centering
 	\begin{minipage} [t]{0.48\textwidth} 
@@ -637,9 +637,9 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 
     如采用水平的绳拉着木块在水平面上运动，那么，木块除
 了同样受到重力$G$、支持力$N$和滑动摩擦力$f$的作用外，还受
-到绳的拉力$F$．木块一共受到四个力的作用，受力图如图 \ref{fig_A_1-18} 所示．
+到绳的拉力$F$．木块一共受到四个力的作用，受力图如图~\ref{fig_A_1-18} 所示．
 
-    在图 \ref{fig_A_1-17} 和图 \ref{fig_A_1-18} 所示的
+    在图~\ref{fig_A_1-17} 和图~\ref{fig_A_1-18} 所示的
 情形里，木块沿着水平方向运动，
 竖直方向的两个力$G$和$N$，跟木
 块静止在水平面上的情形一样，仍旧是互相平衡的力．也就是说，重力$G$和支持力$N$大小相
@@ -650,7 +650,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 滑，它受到几个力的作用？木块受到重力$G$，方向竖直向下．
 由于木块压斜面，斜面发生形变而对木块产生支持力$N$，方
 向垂直于斜面并指向被支持的木块．木块受到这两个力的作
-用，受力图如图 \ref{fig_A_1-19} 所示．
+用，受力图如图~\ref{fig_A_1-19} 所示．
 
 \begin{figure} [htp]\centering
 	\begin{minipage} [t]{0.48\textwidth} 
@@ -669,7 +669,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
     如果斜面不是光滑的，那么，木块沿着斜面下滑时，除了
 受到重力$G$和支持力$N$以外，还受到滑动摩擦力$f$的作用，它
 的方向与木块的运动方向相反，沿着斜面向上．木块的受力
-图如图 \ref{fig_A_1-20} 所示．
+图如图~\ref{fig_A_1-20} 所示．
 
 
 有人可能认为，木块既然沿着斜面下滑，它一定还受到一
@@ -726,7 +726,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 \item 用水平绳拉着木块在水平面上运动，木块的重量是
 5牛，绳的拉力是10牛，滑动摩擦系数是0.3．画出木块的受力图．
 
-\item 如图 \ref{fig_A_1-21} 那样用一根绳子$a$把物体挂起来，再用另一根
+\item 如图~\ref{fig_A_1-21} 那样用一根绳子$a$把物体挂起来，再用另一根
 水平的绳子$b$把物体拉向一旁固定起来．这个物体受到几个力的
 作用？画出物体的受力图．
 
@@ -735,7 +735,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 \caption{} \label{fig_A_1-21} 
 \end{figure} 
 
-\item  在图 \ref{fig_A_1-16} 中没有画出书对桌面的压力$N'$，把这个力
+\item  在图~\ref{fig_A_1-16} 中没有画出书对桌面的压力$N'$，把这个力
 画出来，并回答下面的问题：
 \begin{enumerate} 
 \item 压力$N'$是什么性质的力？
@@ -781,8 +781,8 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 相交于同一点，这几个力叫故\textbf{共点力} ．现在我们先来研究作
 用于物体某一点上的两个力的合成．
 
-    图 \ref{fig_A_1-22a} 表示橡皮条$GE$在力$F_1$和$F_2$的共同作用下，
-沿着直线$GC$伸长了$EO$这样的长度．图 \ref{fig_A_1-22b} 表示撤去$F_1$
+    图~\ref{fig_A_1-22a} 表示橡皮条$GE$在力$F_1$和$F_2$的共同作用下，
+沿着直线$GC$伸长了$EO$这样的长度．图~\ref{fig_A_1-22b} 表示撤去$F_1$
 和$F_2$，用一个力$F$作用在橡皮条上，使橡皮条沿着相同的直
 线伸长相同的长度．力$F$对橡皮条产生的效果跟力$F_1$
 和$F_2$
@@ -796,7 +796,7 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 和$F_2$有什么关系呢？在力$F_1$
 和$F_2$的方
 向上各作线段$OA$和$OB$，根据选定的标度，可使它们的长度分
-别表示力$F_1$和$F_2$的大小（图 \ref{fig_A_1-22c} ），以$OA$和$OB$为邻边
+别表示力$F_1$和$F_2$的大小（图~\ref{fig_A_1-22c}），以$OA$和$OB$为邻边
 作平行四边形$OACB$，量出这个平行四边形的对角线$OC$的
 长度，可以看出，根据同样的标度，合力$F$的大小和方向可以
 用对角线$OC$表示出来．
@@ -809,11 +809,11 @@ $D$点的竖直线$DE$上．$AB$和$DE$的交点$C$就是物体的重心．
 就表示合力的大小和方向，这叫做\textbf{力的平行四边形法则} ．
 
     根据平行四边形对边平行而且相等的性质，力的平行四
-边形还可以用更简单的作画法来代替．在图 \ref{fig_A_1-23a} 中$F$是
-共点力$F_1$和$F_2$的合力．如图 \ref{fig_A_1-23b} 所示，从$O$点出发，把
+边形还可以用更简单的作画法来代替．在图~\ref{fig_A_1-23a} 中$F$是
+共点力$F_1$和$F_2$的合力．如图~\ref{fig_A_1-23b} 所示，从$O$点出发，把
 代表$F_1$和$F_2$的线段$OA$、$AC$首尾相接地画出来，连接$O$和
 $C$，从$O$指向$C$的线段就表示合力$F$的大小和方向．上述作
-图法叫做\textbf{三角形法} ．作三角形$OBC$（图 \ref{fig_A_1-23c} ）同样可以求
+图法叫做\textbf{三角形法} ．作三角形$OBC$（图~\ref{fig_A_1-23c}）同样可以求
 出$F_1$和$F_2$的合力$F$．
 
 \begin{figure} [htp]
@@ -842,7 +842,7 @@ $C$，从$O$指向$C$的线段就表示合力$F$的大小和方向．上述作
 有的力都合成进去，最后得到的合力就是这些力的合力．
 
 \section{力的合成的计算} 
-    合力的大小和方向，还可以利用公式来计算．图 \ref{fig_A_1-24} 中
+    合力的大小和方向，还可以利用公式来计算．图~\ref{fig_A_1-24} 中
 的$OA$和$OB$分别表示两个力$F_1$和$F_2$，$OC$表示它们的合力
 $F$，力$F_1$和$F_2$的夹角为$\theta$．
 
@@ -875,7 +875,7 @@ F=\sqrt{F_1^2+F_2^2+2F_1F_2\cos\theta}
 
     根据 \eqref{eq-A-1.1} \eqref{eq-A-1.2} 两式，可以算出两个共点力的合力的大小和
 方向，例如在运河两岸拉着一艘货船前进，两条绳对货船的
-拉力都是$2\times 10^3$牛，两绳互成$45^\circ$角（图 \ref{fig_A_1-25} ）．合力的大
+拉力都是$2\times 10^3$牛，两绳互成$45^\circ$角（图~\ref{fig_A_1-25}）．合力的大
 小是：
 \[\begin{split} 
 F&= \sqrt{F_1^2+F_2^2+2F_1F_2\cos\theta} \\
@@ -917,11 +917,11 @@ F&= \sqrt{F_1^2+F_2^2+2F_1F_2\cos\theta} \\
 \caption{} \label{fig_A_1-26} 
 \end{figure} 
 
-    当两个力的方向相同时（图 \ref{fig_A_1-26a} ），$\theta =0^\circ$，$\cos 0^\circ=1$，
+    当两个力的方向相同时（图~\ref{fig_A_1-26a}），$\theta =0^\circ$，$\cos 0^\circ=1$，
 所以$F=F_1+F_2$，合力的大小等于两个力的大小之和，合力的
 方向跟两个力的方向相同．
 
-    当两个力的方向相反时（图 \ref{fig_A_1-26b} ），$\theta =180^\circ$，$\cos 180^\circ=-1$，
+    当两个力的方向相反时（图~\ref{fig_A_1-26b}），$\theta =180^\circ$，$\cos 180^\circ=-1$，
 所以$F=F_1-F_2$，合力的大小等于两个力的大小之差，
 方向跟两个力中较大的那个力的方向相同．如果力$F_1$和$F_2$
 的大小相等，合力就等于零．
@@ -953,7 +953,7 @@ $\theta =0^\circ$, $30^\circ$, $60^\circ$, $90^\circ$, $120^\circ$, $150^\circ$,
 作用在物体上的一个力往往产生几个效果．拖拉机拉犁
 耕地，对犁的拉力$F$是斜向上方的，这个力产生两个效果：使
 犁克服泥土的阻力前进，同时把犁上提．这两个效果相当于
-两个力产生的（图~\ref{fig_A_1-27} ）：一个水平的力$F_1$使犁前进，一个竖
+两个力产生的（图~\ref{fig_A_1-27}）：一个水平的力$F_1$使犁前进，一个竖
 直向上的力$F_2$把犁上提．可见力$F$可以用两个力$F_1$和$F_2$
 来代替几个力，如果它们产生的效果跟原来一个力产生的
 效果相同，这几个力就叫做原来那个力的\textbf{分力} ．求一个已知
@@ -968,7 +968,7 @@ $\theta =0^\circ$, $30^\circ$, $60^\circ$, $90^\circ$, $120^\circ$, $150^\circ$,
 力的合成的逆运算，所以一个力分解为两个力同样遵守平行
 四边形法则．把一个已知力作为平行四边形的对角线，那么
 与已知力共点的平行四边形的两个邻边就是已知力的两个分
-力．在图 \ref{fig_A_1-27} 中，$F_1$和$F_2$是$F$的两个分力．
+力．在图~\ref{fig_A_1-27} 中，$F_1$和$F_2$是$F$的两个分力．
 
 
     我们知道，如果没有其他限制，对于同一条对角线，可以
@@ -1008,7 +1008,7 @@ F_2&= G\cos\theta \\
 进；车辆下桥时，力$F_1$使车辆运动加快．为了行车方便与安
 全，高大的桥要造很长的引桥，来减小桥面的坡度．
 
-    把重量为$G$的物体挂在图 \ref{fig_A_1-30} 所示的支架上，物体通过
+    把重量为$G$的物体挂在图~\ref{fig_A_1-30} 所示的支架上，物体通过
 绳子使支架上的$O$点受到一个向下的作用力$F$，大小等于物
 体的重量$G$．力$F$对支架的两个梁产生的效果是什么呢？如
 果在$M$和$N$处加上小弹簧，可以看到$M$处的弹簧受到压缩，$N$
@@ -1050,10 +1050,10 @@ F_2&= F\tan\theta \\
  
 
 
-\item 图 \ref{fig_A_1-31} 是塔式起重机，钢索$NO$与水平悬臂$MO$成
+\item 图~\ref{fig_A_1-31} 是塔式起重机，钢索$NO$与水平悬臂$MO$成
 $30^\circ$角，当起重机吊着$4.0\times 10^4$牛的货物时，钢索和悬臂分别受
 多大的力？
-\item 如图 \ref{fig_A_1-32} 所示，垂直作用在帆上的风力$F=1.0\times 10^4$
+\item 如图~\ref{fig_A_1-32} 所示，垂直作用在帆上的风力$F=1.0\times 10^4$
 牛．沿着船身方向的分力$F_1$使帆船前进，垂直于船身方向的
 分力$F_2$使船身侧倾．设$F$与船身方向成$45^\circ$角，求力$F_1$是多大．
 \begin{figure} [htp]
@@ -1147,19 +1147,19 @@ $F_1=5$牛，$F_2=-5$牛，$F_3=7$牛，$F_4=-5$牛．这里，根据数值
 既然同一条直线上的矢量可以用带正负号的数值来表
 示，它们的运算就可以简化为代数运算．
 
-    如果两个矢量大小相等而且方向相同，如图 \ref{fig_A_1-33} 中的
+    如果两个矢量大小相等而且方向相同，如图~\ref{fig_A_1-33} 中的
 $F_2$和$F_4$，我们就说这两个矢量相等，写成代数式就是
 \begin{equation} 
 F_2=F_4
 \end{equation} 
 
-    如果两个矢量大小相等而方向相反，如图 \ref{fig_A_1-33} 中的$F_1$和$F_2$，
+    如果两个矢量大小相等而方向相反，如图~\ref{fig_A_1-33} 中的$F_1$和$F_2$，
 那么，它们只是符号相反，写成代数式就是
 \begin{equation} 
 F_1=-F_2
 \end{equation} 
 
-    如图 \ref{fig_A_1-34} 所示，设有两个力$F_1$和$F_2$作用在一个物体
+    如图~\ref{fig_A_1-34} 所示，设有两个力$F_1$和$F_2$作用在一个物体
 上，我们可以利用加法运算求出合力$F$：
 \begin{equation}\label{eq-A-1.5}
 \begin{split} 
@@ -1177,7 +1177,7 @@ F&=F_1+F_2\\
 \caption{} \label{fig_A_1-34} 
 \end{figure} 
 
-    我们也可以利用减法运算求分力．如图 \ref{fig_A_1-35} 所示，已知
+    我们也可以利用减法运算求分力．如图~\ref{fig_A_1-35} 所示，已知
 合力$F$和一个分力$F_1$，那么，另一个分力$F_2$：
 \begin{equation} 
 \begin{split} 
@@ -1211,8 +1211,8 @@ F&=F_1+F_2\quad (\theta =0^\circ)\\
 F&=F_1-F_2\quad (\theta =180^\circ)\\
 \end{split}  \]
 等等都是关于力矢量大小的公式．利用这些公式来计算．其
-中的各力都取正值．例如用$F=F_1-F_2$来计算图 \ref{fig_A_1-34} 中的
-合力时，$F_1=10$牛，$F_2=6$牛，$F=F_1-F_2=4$牛．这与 \ref{eq-A-1.5} 式
+中的各力都取正值．例如用$F=F_1-F_2$来计算图~\ref{fig_A_1-34} 中的
+合力时，$F_1=10$牛，$F_2=6$牛，$F=F_1-F_2=4$牛．这与 \eqref{eq-A-1.5} 式
 所得结果相同．初学时概念上要弄清楚，熟悉起来以后，就可
 以根据物理思考灵活运用了．
 
@@ -1248,7 +1248,7 @@ F&=F_1-F_2\quad (\theta =180^\circ)\\
 \section*{习题} 
 
 \begin{enumerate} 
-\item   如图 \ref{fig_A_1-36} 所示，为了防止电线杆倾倒，常在两侧对称
+\item   如图~\ref{fig_A_1-36} 所示，为了防止电线杆倾倒，常在两侧对称
 地拉上钢绳．如果两条钢绳间的夹角是$60^\circ$，每条钢绳的拉力
 都是300牛，求两条钢绳作用在电线杆上的合力．
 
@@ -1267,7 +1267,7 @@ F&=F_1-F_2\quad (\theta =180^\circ)\\
 \end{figure} 
 
 
-\item  图 \ref{fig_A_1-37} 表示用平行四边形法则求三个共点力$F_1$、$F_2$、$F_3$
+\item  图~\ref{fig_A_1-37} 表示用平行四边形法则求三个共点力$F_1$、$F_2$、$F_3$
 的合力$F$．先求出$F_1$和$F_2$的合力，再求出这个合力与$F_3$的
 合力$F$．改用三角形法求出这三个力的合力．改变求和的顺
 序，再分别用平行四边形法则和三角形法求出这三个力的合
@@ -1278,7 +1278,7 @@ F&=F_1-F_2\quad (\theta =180^\circ)\\
 \item   20牛、30牛和40牛的三个力作用于物体的一点，它们
 之间的夹角都是$120^\circ$．求合力的大小和方向．
 
-\item 如图 \ref{fig_A_1-38} 所示，把一个重量为10牛的物体挂在绳子
+\item 如图~\ref{fig_A_1-38} 所示，把一个重量为10牛的物体挂在绳子
 上，已知$AC=BC=3$米，$CD=1$米．求绳$AC$和$BC$所受的拉
 力．
 \begin{figure} [htp]
