--- a/1/A/02.tex
+++ b/1/A/02.tex
@@ -193,9 +193,9 @@ $1.3\times 10^4$千米）比地球和太阳之间的距离（约$1.5\times 10^8$
 \end{figure}
 
 这就是说，位移的数值等于末位置的坐标$x$减去初位置
-的坐标$x_0$．在图~\ref{fig_A_2-7} 中，$A$点表示初位置，$B$点表示未位置．图甲
+的坐标$x_0$．在图~\ref{fig_A_2-7} 中，$A$点表示初位置，$B$点表示未位置．图~\ref{fig_A_2-7a}
 中，$s=x-x_0=4-2=2$米，位移是正值，它的大小
-是2米，方向与坐标轴的正方向相同．图乙中，$s=x-x_0=-5-1=-6$
+是2米，方向与坐标轴的正方向相同．图~\ref{fig_A_2-7b} 中，$s=x-x_0=-5-1=-6$
 米，位移是负值，它的大小是6米，方向与
 坐标轴的正方向相反．可见，在直线运动中，用一个带有正
 负号的数值就可以把位移矢量的大小和方向都表示出来．
@@ -519,7 +519,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 \section{匀变速直线运动~~加速度}
     \subsection{匀变速直线运动}
     
-    伽利略（1564 $\sim$1642）是首先认真研究
+    伽利略（$1564 \sim 1642$）是首先认真研究
 变速运动的物理学家．伽利略就是从最简单的变速运动着手
 的．他设想，最简单的变速运动的速度应该是均匀变化的．
 但是，速度的变化怎样才算均匀呢？他考虑了两种可能：一种
@@ -644,7 +644,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 验数据，求它们的加速度．
 \begin{center}
 \vspace{0.3cm}
-\begin{tabular}{ccccc}
+\begin{tblr}{ccccc}
 \toprule
 汽车型号 & 初速度$v_0$ & 末速度$v_t$ & 时间$t$ & 加速度$a$\\
 & （km/h）& （km/h）& （s）& （m/s$^2$）\\
@@ -653,7 +653,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 某型号4吨载重汽车& 20& 50& 38\\
 某型号8吨载重汽车& 20& 50& 50\\
 \bottomrule
-\end{tabular}
+\end{tblr}
 \vspace{0.3cm}
 \end{center}
 
@@ -1213,7 +1213,7 @@ g&=\frac{\Delta s}{t^2}=\frac{1.08}{(1/30)^2} \Ucmsq \\
 \begin{table}
 	\centering
 	\caption{其中$s$是间隔长度（厘米）；$\Delta s$是后一间隔长度减去前一间隔长度（厘米）．}\label{tab-A-2.1}
-\begin{tabular}{ccc}
+\begin{tblr}{ccc}
 \toprule
 间隔编号&
 $s$&$\Delta s$
@@ -1240,7 +1240,7 @@ $s$&$\Delta s$
 \\
 	11&	18.52&	1.07\\
 \bottomrule
-\end{tabular}
+\end{tblr}
 
 \end{table}
 
@@ -1334,7 +1334,7 @@ s&=v_0 t-\frac{1}{2}gt^2
 过这个位置的速度总是大小相等、方向相反的．有兴趣的同学，对于后一论断可以自己试做证明．
 
 \begin{example}
-在15米高的塔上以4$\Ums$的初速度竖直上抛一个石子（图~\ref{fig_A_2-22} ），求经过2秒后石子离地面的高度．取$g=10\Umsq$．
+在15米高的塔上以4$\Ums$的初速度竖直上抛一个石子（图~\ref{fig_A_2-22}），求经过2秒后石子离地面的高度．取$g=10\Umsq$．
 \end{example}
 
 \begin{solution}
