--- a/1/A/03.tex
+++ b/1/A/03.tex
@@ -1,7 +1,6 @@
 \chapter{运动定律}\label{chapter-law-of-motion}
 
 
-% 
 前一章我们学习了怎样描述物体的运动，但是没有进一步讨论物体为什么做这种或那种运动．要讨论这个问题，必须知道运动和力的关系．这一章我们就来研究运动和力的关系，阐明力是使物体运动状态发生改变的原因．在力学中，只研究物体怎样运动而不涉及运动和力的关系的分科，叫做\textbf{运动学}；研究运动和力的关系的分科，叫做\textbf{动力学}．
 
 根据动力学的知识，如果知道了物体的受力情况，就可以确定物体的运动状况；或者反过来，如果知道了物体的运动状况，也可以确定物体的受力情况．这样，我们就不但能够描述运动，而且能够创造条件来控制物体的运动，使物体的运动符合人们的要求．
@@ -14,10 +13,10 @@
 在初中我们已经学过了牛顿第一定律，这一节我们先回顾一下历史，然后对这个定律本身作一些讨论．
 
 \subsection{历史的回顾} 
-远在两千多年以前，人们已经提出了运动和力的关系问题，可是直到伽利略和牛顿（1642$\sim$1727）时代，才对这个问题给出了正确的答案．
+远在两千多年以前，人们已经提出了运动和力的关系问题，可是直到伽利略和牛顿（$1642 \sim 1727$）时代，才对这个问题给出了正确的答案．
 
 在十七世纪以前，人们普遍认为力是维持物体运动的原因．用力推车，车子才前进，停止用力，车子就要停下来．
-古希腊的哲学家亚里士多德（公元前384$\sim$322）根据这类经验事实得出结论说：必须有力作用在物体上，物体才能运动
+古希腊的哲学家亚里士多德（公元前$384 \sim 322$）根据这类经验事实得出结论说：必须有力作用在物体上，物体才能运动
 ，没有力的作用，物体就要静止下来．
 
 在亚里士多德以后的两千年内，动力学一直没有多大进展．
@@ -65,7 +64,7 @@
 伽利略的实验虽然是想象中的理想实验，但它们是建立在可靠的事实的基础之上的．伽利略把经验事实和抽象思维结合起来，这正是他的工作的卓越之处．由于伽利略细心地研究了理想实验，才使他对动力学做出了重大贡献．
 这类理想实验在真实的实验基础上，抓住主要因素，忽略次要因素，可以深入地揭示现象的本质，它是科学研究中的一种重要方法．
 
-伽利略时代的法国科学家笛卡尔（1596$\sim$1650）进一步补充和完善了伽利略的论点，第一次明确地表述了惯性定律．笛卡尔认为：如果没有其他原因，运动的物体将继续以同一速度沿着一条直线运动，既不会停下来，也不会偏离原来的方向．这样，笛卡尔为发展动力学又迈出了重要一步．
+伽利略时代的法国科学家笛卡尔（$1596 \sim 1650$）进一步补充和完善了伽利略的论点，第一次明确地表述了惯性定律．笛卡尔认为：如果没有其他原因，运动的物体将继续以同一速度沿着一条直线运动，既不会停下来，也不会偏离原来的方向．这样，笛卡尔为发展动力学又迈出了重要一步．
 
 \subsection{牛顿第一定律} 
 牛顿在伽利略等人的研究基础上，并根据他自己的研究，系统地总结了力学的知识，提出了三条运动定律，其中第一条定律的内容是：
@@ -183,7 +182,7 @@
 	\centering
 	\begin{minipage}[b]{0.45\linewidth}
 		\centering
-		\begin{tabular}{cc}
+		\begin{tblr}{cc}
 			\toprule
 			$F$  & $a$ \\
 			（$\UkgfA$）&（$\UmsqA$）\\
@@ -194,7 +193,7 @@
 			0.080  &  0.775  \\
 			0.100  &  0.955  \\
 			\bottomrule
-		\end{tabular}
+		\end{tblr}
 		\caption{其中 $\UkgfA$ 
 			%（kilogram-force）
 			表示千克力}\label{tab_A_3-1}
@@ -261,7 +260,7 @@
 	\centering
 	\begin{minipage}[b]{0.45\linewidth}
 		\centering
-		\begin{tabular}{cc}
+		\begin{tblr}{cc}
 			\hline
 			$m$  & $a$ \\
 			（$\UkgA$）&（$\UmsqA$）\\
@@ -272,7 +271,7 @@
 			0.600  &  0.71  \\
 			0.700  &  0.62  \\
 			\hline
-		\end{tabular}
+		\end{tblr}
 		\caption{}\label{tab_A_3-2}
 	\end{minipage}
 	\hfil
@@ -303,7 +302,7 @@
 	\centering
 	\begin{minipage}[b]{0.45\linewidth}
 		\centering
-		\begin{tabular}{cc}
+		\begin{tblr}{cc}
 			\hline
 			$1/m$  & $a$ \\
 			（$\Ukg^{-1}$）&（$\Umsq$）\\
@@ -314,7 +313,7 @@
 			1.67  &  0.71  \\
 			1.43  &  0.62  \\
 			\hline
-		\end{tabular}
+		\end{tblr}
 		\caption{}\label{tab_A_3-3}
 	\end{minipage}
 	\hfil
@@ -456,7 +455,7 @@
 \begin{table}[htbp]
 	\centering
 	\caption{重力加速度的数值（$\UmsqA$），标准值：$g=9.80665\Umsq$}\label{tab_A_3-4}
-	\begin{tabular}{ccc}
+	\begin{tblr}{ccc}
 		\hline
 		地点  &  纬度  &  重力加速度\\
 		\hline
@@ -470,7 +469,7 @@
 		莫斯科  &$55^\circ 45'$    & 9.816 \\
 		北极  & $90^\circ$   & 9.832 \\
 		\hline
-	\end{tabular}
+	\end{tblr}
 \end{table}
 
 在地球上同一个地方，各个物体的重力加速度是相同的．
@@ -965,7 +964,7 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 展，不断发现新的事实，如高速运动的电子的质量随着速度的
 增大而增大．这些事实，用经典力学无法加以说明，经典力学
 的理论与实验事实之间发生了矛盾．在这种情况下，在二十
-世纪初，著名的物理学家爱因斯坦（1879$\sim$1955）提出了狭义
+世纪初，著名的物理学家爱因斯坦（$1879 \sim 1955$）提出了狭义
 相对论，成为现代物理的开端．狭义相对论从根本上改变了
 我们通常对空间和时间的看法，提出了一种新的时空观．从
 经典力学看来，物体的长度和时间间隔跟物体运动的速度没
