--- a/1/A/04.tex
+++ b/1/A/04.tex
@@ -189,7 +189,7 @@ y&=\frac{1}{2}gt^2
     \centering
     \begin{minipage}{0.35\linewidth}
     	\centering
-    	\begin{tabular}{ccc}
+    	\begin{tblr}{ccc}
     		\toprule
     		$t$（秒）   &  $x$（米）   &  $y$（米）\\
     		\midrule
@@ -198,7 +198,7 @@ y&=\frac{1}{2}gt^2
     		3 & 60 & 45\\
     		$\vdots$ & $\vdots$ & $\vdots$\\
     		\bottomrule
-    	\end{tabular}
+    	\end{tblr}
     \end{minipage}
     \hfil
     \begin{minipage}{0.5\linewidth}
@@ -497,7 +497,7 @@ $\Delta v/\Delta t$的极限值
 
 
 
-从图~\ref{fig_A_4-18} 中可以看出，图乙中的矢量三角形跟图甲中的$\triangle OAB$是相似形．
+从图~\ref{fig_A_4-18} 中可以看出，图~\subref{fig_A_4-18b} 中的矢量三角形跟图~\subref{fig_A_4-18a} 中的$\triangle OAB$是相似形．
 如果用$v$表示$v_A$、$v_B$的大小，则有
 \[\begin{split}
 \frac{\Delta v}{v}&=\frac{\overline{AB}}{r}\\
