--- a/1/A/05.tex
+++ b/1/A/05.tex
@@ -12,17 +12,17 @@
 由于地心说能解释一些天文现象，又符合人们的日常经验，而且完全符合天主教的思想：地球是宇宙的中心，宇宙万物都是上帝创造的．所以，地心说得到教会的支持，延续了一千多年之久．但是，随着生产和航海事业的发展，天文观测资料日益丰富，人们发现托勒密地心说的理论与实际观测的资料并不完全一致．
 虽然对托勒密的地心说理论进行了修正，但仍不能解释某些天文现象．
 
-十六世纪，波兰天文学家哥白尼（1473$\sim$1543），经过近四十年的天文观测和研究，在古代日心说的启发下，并且利用托勒密及其后人积累的天文资料，重新提出了日心说．
+十六世纪，波兰天文学家哥白尼（$1473 \sim 1543$），经过近四十年的天文观测和研究，在古代日心说的启发下，并且利用托勒密及其后人积累的天文资料，重新提出了日心说．
 哥白尼日心说的主要内容是：太阳是宇宙的中心，地球和其他行星都围绕太阳公转，并且自转着（图~\ref{fig_A_5-1}）．哥白尼的学说正确地反映了行星运动的情况，可以简单明了地说明许多天文学问题，所以很快传播开了．
-但是日心说不符合宗教的主张，教会禁止传播哥白尼的学说，并残酷迫害接受日心说的人，用火烧死了坚持日心说的意大利人布鲁诺（1548$\sim$1600）．伽利略也因为宣传日心说受到了教会的审讯和囚禁．
+但是日心说不符合宗教的主张，教会禁止传播哥白尼的学说，并残酷迫害接受日心说的人，用火烧死了坚持日心说的意大利人布鲁诺（$1548 \sim 1600$）．伽利略也因为宣传日心说受到了教会的审讯和囚禁．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/5-1.pdf}
 	\caption{简化了的哥白尼体系行星轨道}\label{fig_A_5-1}
 \end{figure}
 
-丹麦天文学家第谷（1546$\sim$1601）认为，要认识行星运动的规律，需要积累高度精确的观测数据．
-他连续二十年对行星的位置进行了精确的测量，积累了大量的数据．第谷逝世后，他的助手开普勒（1571$\sim$1630）仔细研究了第谷的观测资料，企图阐明行星运动的真实轨道，来发展和完善日心说．开普勒经过四年多的刻苦计算，先后否定了十九种设想，最后发现行星运行的真实轨道不是圆，而是椭圆，并于1609年发表了两条关于行星运动的定律：
+丹麦天文学家第谷（$1546 \sim 1601$）认为，要认识行星运动的规律，需要积累高度精确的观测数据．
+他连续二十年对行星的位置进行了精确的测量，积累了大量的数据．第谷逝世后，他的助手开普勒（$1571 \sim 1630$）仔细研究了第谷的观测资料，企图阐明行星运动的真实轨道，来发展和完善日心说．开普勒经过四年多的刻苦计算，先后否定了十九种设想，最后发现行星运行的真实轨道不是圆，而是椭圆，并于1609年发表了两条关于行星运动的定律：
 
 1. \textit{所有的行星分别在大小不同的椭圆轨道上围绕太阳
 运动，太阳是在这些椭圆的一个焦点上．}
@@ -64,7 +64,7 @@
 \begin{table}[htbp]
 	\centering
 	\caption{太阳系九大行星的平均轨道半径和周期}\label{tab_A_5-1}
-	\begin{tabular}{ccc}
+	\begin{tblr}{ccc}
 		\toprule
 		行星    &  平均轨道半径（m）  & 周期（s）\\
 		\midrule
@@ -78,7 +78,7 @@
 		海王星    &  $4.50\times 10^{12}$    &  $5.20\times 10^9$ \\ 
 		冥王星    & $5.9\times 10^{12}$     &  $7.82\times 10^9$ \\ 
 		\bottomrule
-	\end{tabular}
+	\end{tblr}
 \end{table}
 
 \item 有一个名叫谷神的小行星（质量$1.00\times 10^{21} \Ukg$），它的轨道半径是地球的2.77倍，求出它绕太阳一周需要多少年．
@@ -133,7 +133,7 @@
 有一些科学家，为了测出物体间的引力，曾利用山峰、海岛等质量大的物体做过实验，但都没有取得令人满意的结果．
 
 1798年，即在牛顿发现万有引力定律一百多年以后，英
-国的卡文迪许（1731$\sim$1810）巧妙地利用扭秤装置，第一次在实验室里比较准确地测出了万有引力恒量的数值．
+国的卡文迪许（$1731 \sim 1810$）巧妙地利用扭秤装置，第一次在实验室里比较准确地测出了万有引力恒量的数值．
 
 \begin{figure}[htbp]
 	\centering
