--- a/1/A/05.tex
+++ b/1/A/05.tex
@@ -29,7 +29,7 @@
 
 这叫做\textbf{开普勒第一定律}．
 
-2. 对每个行星来说，\textit{太阳和行星的联线在相等的时间内
+2. 对每个行星来说，\textit{太阳和行星的连线在相等的时间内
 扫过相等的面积．}
 
 这叫做\textbf{开普勒第二定律}．如图~\ref{fig_A_5-2} 所示，行星沿着椭圆
@@ -39,7 +39,7 @@
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/5-2.pdf}
-	\caption{太阳和行星的联线在相等的时间内扫过相等的面积}\label{fig_A_5-2}
+	\caption{太阳和行星的连线在相等的时间内扫过相等的面积}\label{fig_A_5-2}
 \end{figure}
 
 
