--- a/1/B/02.tex
+++ b/1/B/02.tex
@@ -233,7 +233,7 @@ $W$为正值，表示外界对气体做了$1.59\times 10^5$焦的功．
 人们利用能的转化和守恒定律来研究自然取得了许多重
 大的成就．
 下面我们简单介绍一个近代物理学研究中的例子．在三十年代初期，人们发现在某些原子核反应中能量似乎并不守恒，一部分能量消失了．当时一些人就认为这些实验事实表明能量并不是普遍守恒的．但是另一些人认为在这里能量也是守恒的，奥地利物理学家泡利（$1900 \sim 1958$）在1933年提出，可能存在着一种当时并不知道的极其微小的粒子，所谓消失了的能量，就是被它们带走了．
-后来意大利物理学家费密（$1901 \sim 1954$）把这种粒子叫做中微子，并且发展了有关中微子的理论，认为它是一种不带电的、质量极其微小的粒子．以后人们一面继续从理论上研究这种假设的中微子，一面想办法用实验来探测中微子的存在．
+后来意大利物理学家费米（$1901 \sim 1954$）把这种粒子叫做中微子，并且发展了有关中微子的理论，认为它是一种不带电的、质量极其微小的粒子．以后人们一面继续从理论上研究这种假设的中微子，一面想办法用实验来探测中微子的存在．
 直到1956年，在人们已经拥有核反应堆后，才在实验中证实了中微子是的确存在的．
 这样，能的转化和守恒定律就直接导致了中微子的发现．
 
