--- a/1/C/04.tex
+++ b/1/C/04.tex
@@ -774,7 +774,7 @@ $LC$回路的周期和频率跟哪些因素有关呢？让我们改变
     \begin{enumerate}
         \item 增大电容器两极板间的距离；
         \item 增大电容器两极板的正对面积；
-        \item 在线圈中插入铁心；
+        \item 在线圈中插入铁芯；
         \item 减小线圈的匝数．
     \end{enumerate}
     \item 赫兹实验中的发射器为什么用图~\ref{fig_C_4-9} 那种形式，而不用该实验中接收器那种形式？赫兹实验中需要把接收器的两金属球调节到合适的距离，才有明显的接收效果，为什么？
