--- a/fig/C/2-42.tex
+++ b/fig/C/2-42.tex
@@ -23,7 +23,7 @@
   (0.224,0.584)--(0.3,0.9);
   \draw[thin](-0.31,0.67)--++(165:0.5)node[left]{线圈};
   \draw[thin](1.2,-0.5)--++(0.6,0)node[right]{磁带};
-  \draw[thin](0.55,0)--++(0.6,0)node[right]{铁心};
+  \draw[thin](0.55,0)--++(0.6,0)node[right]{铁芯};
   \draw[thin](0,-0.55)--++(-60:0.5)node[right]{磁头缝隙};
 \end{tikzpicture}
 \end{document}
